issues/#94 Improve test.sh